--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -446,7 +446,7 @@
                             android:layout_width="1dp"
                             android:layout_height="@dimen/_35sdp"
                             android:layout_centerInParent="true"
-                            android:background="@color/light_gray"></View>
+                            android:background="@color/et_bg_gray"></View>
 
                         <LinearLayout
                             android:id="@+id/lyShare"
