--- a/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
@@ -46,7 +46,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
-                android:text="Request Sent Successful"
+                android:text="Request Sent Successfully"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_16ssp"
                 android:visibility="gone" />
