--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -14,9 +14,9 @@
         android:id="@+id/layoutNewPassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingLeft="@dimen/_21sdp"
-        android:paddingTop="@dimen/_45sdp"
-        android:orientation="vertical">
+        android:paddingTop="@dimen/_45sdp">
 
         <RelativeLayout
             android:id="@+id/layoutClose"
@@ -109,6 +109,7 @@
                                 android:id="@+id/etPassword"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:autofillHints="creditCardSecurityCode"
                                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionNext"
@@ -198,6 +199,7 @@
                             android:id="@+id/etCPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionDone"
