--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -100,6 +100,7 @@
                     android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                     android:singleLine="true"
                     android:maxLines="1"
+                    android:autofillHints="creditCardSecurityCode"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
