--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -79,6 +79,7 @@
                     android:id="@+id/currentPassET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autofillHints="creditCardSecurityCode"
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="8-12 Characters"
@@ -88,7 +89,6 @@
                     android:maxLength="12"
                     android:maxLines="1"
                     android:padding="@dimen/_14sdp"
-
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
@@ -100,11 +100,11 @@
                 android:id="@+id/layoutPwdError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:orientation="horizontal"
-                android:visibility="gone"
                 android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp">
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_21sdp"
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <ImageView
                     android:layout_width="wrap_content"
