--- a/app/src/main/res/layout/activity_quick_action.xml
+++ b/app/src/main/res/layout/activity_quick_action.xml
@@ -19,13 +19,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingTop="@dimen/_12sdp"
-        android:paddingBottom="@dimen/_14sdp">
+        android:paddingBottom="@dimen/_10sdp">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_23sdp"
             android:layout_marginRight="@dimen/_6sdp"
             android:src="@drawable/ic_scan" />
 
@@ -46,7 +47,7 @@
 
         <View
             android:layout_width="wrap_content"
-            android:layout_height="1.5dp"
+            android:layout_height="1dp"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
             android:background="@color/blue_light" />
@@ -58,12 +59,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
-        android:orientation="horizontal">
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/_12sdp"
+        android:paddingBottom="@dimen/_10sdp">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_height="@dimen/_23sdp"
             android:layout_marginRight="@dimen/_6sdp"
             android:src="@drawable/ic_send_icon" />
 
@@ -71,8 +74,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="9dp"
-            android:layout_marginTop="@dimen/_14sdp"
-            android:layout_marginBottom="@dimen/_16sdp"
             android:fontFamily="@font/opensans_semibold"
             android:text="Pay/Request"
             android:textColor="@color/primary_black"
@@ -86,7 +87,7 @@
 
         <View
             android:layout_width="wrap_content"
-            android:layout_height="1.5dp"
+            android:layout_height="1dp"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
             android:background="@color/blue_light" />
@@ -98,12 +99,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
-        android:orientation="horizontal">
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/_12sdp"
+        android:paddingBottom="@dimen/_10sdp">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
-            android:layout_marginTop="@dimen/_12ssp"
             android:layout_marginRight="@dimen/_6sdp"
             android:src="@drawable/ic_buy_icon" />
 
@@ -111,8 +114,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_6sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginBottom="@dimen/_15sdp"
             android:fontFamily="@font/opensans_semibold"
             android:text="Buy Tokens"
             android:textColor="@color/primary_black"
@@ -126,7 +127,7 @@
 
         <View
             android:layout_width="wrap_content"
-            android:layout_height="1.5dp"
+            android:layout_height="1dp"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
             android:background="@color/blue_light" />
@@ -138,12 +139,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
-        android:orientation="horizontal">
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/_12sdp"
+        android:paddingBottom="@dimen/_10sdp">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
             android:layout_height="@dimen/_23sdp"
-            android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginRight="@dimen/_6sdp"
             android:src="@drawable/ic_withdraw_icon" />
 
@@ -151,8 +154,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_6sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginBottom="@dimen/_14sdp"
             android:fontFamily="@font/opensans_semibold"
             android:text="Withdraw to USD"
             android:textColor="@color/primary_black"
@@ -162,12 +163,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="@dimen/_26sdp">
+        android:layout_marginBottom="@dimen/_26sdp"
+        android:orientation="vertical">
 
         <View
             android:layout_width="wrap_content"
-            android:layout_height="1.5dp"
+            android:layout_height="1dp"
             android:layout_marginLeft="@dimen/_24sdp"
             android:layout_marginRight="@dimen/_24sdp"
             android:background="@color/blue_light" />
